--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,5 @@ edition = "2021"
 cpal = "0.13.5"
 midir = "0.7.0"
 hashbrown = "0.12"
+serde = { version = "1.0", features = ["derive"] }
+serde_yaml = "0.8"
